# liblena

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_macos_x64_debug.sh  build_macos_x64_release.sh  conanfile.py  requirements.txt
.github/workflows/: macos.yml
examples/: jpeg.cpp
include/: logging.h  ppm_image.h  types.h  utils.h  ycbcr.h
profiles/: mac_x64_debug
scripts/: prepare_macos_x64_debug.sh  prepare_macos_x64_release.sh
scripts/macos/: conan_cmake_path.sh  install_conan.sh
src/: ppm_image.cpp  ycbcr.cpp
tests/: ppm_image_tests.cpp  ycbcr_tests.cpp
